# streamlit-crud-app

./: README.mb  app - コピー.py  app.py  data.csv  debug_test.py  pyproject.toml  requirements.txt  run_app.bat
