[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-voice-crud-app"
version = "0.1.0"
description = "Streamlit CRUD app with Google Sheets and Text-to-Speech"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit==1.28.0",
    "st-gsheets-connection==0.0.3",
    "pandas==2.0.3",
    "google-cloud-texttospeech==2.14.2",
    "gspread==5.10.0",
    "google-auth==2.23.0",
    "google-auth-oauthlib==1.0.0",
    "google-auth-httplib2==0.1.1"
]